Testing/salesforce_demo-hybris-ordermgmt/force-app/main/default/objects/Customer__c/Customer__c.object-meta.xml
<CustomObject>
    <label>Customer</label>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>