Testing/salesforce_demo-hybris-ordermgmt/force-app/main/default/objects/Customer__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>email</label>
    <type>Text</type>
    <length>255</length>
</CustomField>