Testing/salesforce_demo-hybris-ordermgmt/force-app/main/default/objects/Customer__c/fields/LoyaltyTier__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyTier__c</fullName>
    <label>loyaltyTier</label>
    <type>Text</type>
    <length>255</length>
</CustomField>