Testing/salesforce_demo-hybris-ordermgmt/force-app/main/default/objects/Customer__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>phone</label>
    <type>Text</type>
    <length>255</length>
</CustomField>