Testing/salesforce_demo-hybris-ordermgmt/force-app/main/default/objects/Customer__c/fields/Uid__c.field-meta.xml
<CustomField>
    <fullName>Uid__c</fullName>
    <label>uid</label>
    <type>Text</type>
    <length>255</length>
</CustomField>